@@ -1,13 +1,6 @@
 This is a list of features that are scheduled to be removed from dpkg.
 
 
-What: 822-date (program)
-Status: obsolete
-When: lenny+1
-Warning: program
-Why:
- Should switch to use 'date -R'.
-
 What: Source-Version (substvar)
 Status: obsolete
 When: lenny+1
@@ -99,4 +92,10 @@ When: 1.15.1
 Why:
  These priorities have been superseded by either other fields or values in
  other fields.
+
+What: 822-date (program)
+Status: removed
+When: 1.15.1
+Why:
+ Should switch to use 'date -R'.
 
