@@ -1,7 +1,6 @@
 ../shlibs.default etc/dpkg
 ../shlibs.override etc/dpkg
 
-usr/bin/822-date
 usr/bin/dpkg-architecture
 usr/bin/dpkg-buildpackage
 usr/bin/dpkg-checkbuilddeps
@@ -18,7 +17,6 @@ usr/bin/dpkg-source
 usr/bin/dpkg-vendor
 usr/lib/dpkg/parsechangelog
 usr/share/locale/*/LC_MESSAGES/dpkg-dev.mo
-usr/share/man/{*/*,*}/822-date.1
 usr/share/man/{*/*,*}/deb-control.5
 usr/share/man/{*/*,*}/deb-version.5
 usr/share/man/{*/*,*}/deb-substvars.5
