@@ -82,7 +82,6 @@ libdpkg-perl					Dpkg perl modules.
 
 cleanup-info		[CLEANUP-INFO]
 install-info		[INSTALL-INFO]
-822-date		[822-DATE]
 
 dpkg-dev					Those should be reassigned to
 						the dpkg-dev package.
@@ -120,7 +119,6 @@ usercategory dpkg-program
   + Dpkg perl modules [tag=libdpkg-perl]
   + start-stop-daemon [tag=s-s-d]
   + update-alternatives [tag=u-a]
-  + 822-date [tag=822-date]
   + cleanup-info [tag=cleanup-info]
   + install-info [tag=install-info]
   + dselect [package=dselect]
