@@ -1,40 +1,0 @@
-.\" Hey, Emacs!  This is an -*- nroff -*- source file.
-.TH 822\-date 1 "2007-01-24" "Debian Project" "dpkg utilities"
-.SH NAME
-822\-date \- Print date and time in RFC2822 format
-.
-.SH SYNOPSIS
-.B 822\-date
-.
-.SH DESCRIPTION
-.B 822\-date
-displays the current date and time in the format described in RFC2822.
-It does so by simply calling
-.BR date (1)
-with the \fB\-R\fP option.
-.PP
-.B Using 822\-date is deprecated since
-.BR date (1)
-provides the same functionality when called with the \fB\-R\fP.
-.
-.SH OPTIONS
-.B 822\-date
-does not take any arguments or options.
-.
-.SH BUGS
-This facility really ought to be part of
-.BR date (1).
-.
-.SH SEE ALSO
-.I Internet Message Format
-(RFC2822),
-.BR date (1).
-.
-.SH AUTHOR
-.B 822\-date
-is a really simple wrapper around
-.BR date (1).
-By its simplicity, the code is probably not copyrightable and
-should be considered to be in the public domain. This man page
-was written by Frank Lichtenheld based on an earlier version
-by Ian Jackson and was also put in the public domain.
