@@ -13,11 +13,6 @@
                  opt_ru:"-L koi8-r         -A koi8-r"     \
                  opt_sv:"-L ISO-8859-1"
 
-[type:man] $(srcdir)/822-date.1                 \
-           $lang:$lang/822-date.1               \
-           add_$lang:$(srcdir)/po/$lang.add
-
-
 [type:man] $(srcdir)/deb.5                      \
            $lang:$lang/deb.5                    \
            add_$lang:$(srcdir)/po/$lang.add
