@@ -16,5 +16,4 @@ dpkg-statoverride
 update-alternatives
 install-info
 install-info-stamp
-822-date
 t.tmp
