@@ -1,6 +1,5 @@
 # This is the list of all source files with translatable strings.
 
-scripts/822-date.pl
 scripts/dpkg-architecture.pl
 scripts/dpkg-buildpackage.pl
 scripts/dpkg-checkbuilddeps.pl
