@@ -109,6 +109,7 @@ dpkg (1.15.1) UNRELEASED; urgency=low
   * Remove obsolete --largemem and --smallmem dpkg options.
   * Remove obsolete --force-auto-select dpkg option.
   * Remove obsolete priorities support from dpkg.
+  * Remove obsolete 822-date program.
 
   [ Frank Lichtenheld ]
   * Dpkg::Version: Remove unnecessary function next_elem which just
